[package]
name = "miniz_oxide_c_api"
authors = ["Frommi <daniil.liferenko@gmail.com>", "oyvindln <oyvindln@users.noreply.github.com>"]
version = "0.3.1"
build = "src/build.rs"
license = "MIT"
readme = "README.md"
keywords = ["zlib", "miniz", "deflate", "encoding"]
categories = ["compression"]
repository = "https://github.com/Frommi/miniz_oxide"
homepage = "https://github.com/Frommi/miniz_oxide/"
documentation = "https://docs.rs/miniz_oxide_c_api"
description = "DEFLATE compression and decompression API designed to be Rust drop-in replacement for miniz"
edition = "2018"
exclude = ["benches/data/*", "/*.sh", "/redefine.txt", "fuzz/*", "tests/*", "miniz/*"]

[workspace]
members = ["miniz_oxide_test"]

[lib]
name = "miniz_oxide_c_api"
# Place to modify crate type in test build script while --crate-type=staticlib seems broken
#CRATE_TYPE

[dependencies]
cc = { git = "ssh://git@github.com/kharmic-universe-deps/cc-rs.git", branch = "ku-0.1.0" }
libc = { git = "ssh://git@github.com/kharmic-universe-deps/libc-rs.git", branch = "ku-0.1.0" }
crc32fast = {git = "ssh://git@github.com/kharmic-universe-deps/crc32fast-rs.git", branch = "ku-0.1.0"}
miniz_oxide = { path = "miniz_oxide" }

[build-dependencies]
cc = { git = "ssh://git@github.com/kharmic-universe-deps/cc-rs.git", branch = "ku-0.1.0" }

[features]
default = []
miniz_zip = ["build_stub_miniz"]
fuzzing = ["build_orig_miniz", "no_c_export"]
benching = ["build_orig_miniz", "no_c_export"]
build_orig_miniz = []
build_stub_miniz = []
no_c_export = []
libc_stub = []

simd = ['miniz_oxide/simd']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

